--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
 body {
     background-image: url("http://www.casino-capers.org/wp/wp-content/uploads/2015/01/Casino-Capers-Web-Background-2015.jpg");    
 }
+
+h1 {
+    color: white;
+    text-align: center;
+}
